assets/css/style.css
/* These are the custom styles for a class project game created in Javascript
Author: Bonnie L. Hoffman - bonnieho@rice.edu */

/* main div to hold the children together  */

body {
	font-family: arial, helvetica, sans-serif;
	color: #999;
}


#main {
	width: 65%;
	margin: auto;
}


h1 {
	font-size: 120%;
	margin: 24px;
}


h2 {
	font-size: 110%;
	margin: 20px;
	padding: 24px;
	text-align: center;
}


h3 {
	font-size: 100%;
	margin: 24px;
	margin-left: 30%;
}

#word {
	text-align: center;
	height: 48px;
}

#wordToGuess {
	/* margin-top: -24px; */
	/* margin-left: 72px; */
	font-size: 180%
	font-weight: bold;
  display: inline;
}

#wrongletters {
	font-weight: bold;
}

#inPageAlert {
	text-align: center;
	/* height: 48px; */
}

/*  =======  light the lamps - I had to make these unique ids because I haven't been successful with a class ===== */
#win-lamp_L {
	display: none;
	margin-top: -24px;
	padding: 0 12px;
}

#win-lamp_R {
	display: none;
	margin-top: -24px;
	padding: 0 12px;
}
/*  =========  END light the lamps  ========== */

.ital {
	font-family: times, 'times new roman', serif;
	font-size: 80%;
	font-style: italic;
	margin: -12px 24px 24px 60px;
}

.instructions {
	width: 50%;
	font-size: 80%;
	font-style: italic;
	margin: auto;
	padding:16px 24px;
	border: solid 1px #999;
}

.instructions ul {
	margin: 24px 0 0 0;
	margin-left: 20%;
	list-style-type: circle;
}

.instructions li {
	margin: 8px 0;
}

.foot {
	font-size: 80%;
	text-align: center;
	font-style: italic;
}

/* footer link color change */
.foot a:link {
	color: lime;
}

.foot a:visited {
  color: lime;
}

.foot a:hover {
  color: lime;
}

.foot a:active {
  color: lime;
}


/*  =======================  MODAL stuff  =======================  */
/* styles are from: https://www.w3schools.com/howto/howto_css_modals.asp */
/* modification to make the modal's content to center nicely come from http://lynn.io/2014/02/22/modalin/ */

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0; 
  width: 100%; /* Full width */
  height: 100%;  /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  -webkit-animation-name: fadeIn; /* Fade in the background */
  -webkit-animation-duration: 0.6s;
  animation-name: fadeIn;
  animation-duration: 0.6s
}

/* Modal Content */
/* w3schools has this as a class ! */
.modal-content {
  position: fixed; /
  bottom: 0;
  background-color: #fefefe;
  width: 40%; /* sets the width of the content element (parent that's holding everything) */
      /* from lynn.io */
      max-height: calc(100% - 100px);
      position: fixed;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
  border-radius: 25px;
  -webkit-animation-name: slideIn; /* check the animation - I don't know if I want a slide-in */
  -webkit-animation-duration: 0.4s;
  animation-name: slideIn;
  animation-duration: 0.4s
}

/* The Close Button */
.close {
  color: #fff;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

/* w3schools has this as a class ! */
#modal-header {
  padding: 12px 18px;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  /* background-color: #5cb85c; original green color */
  background-color: #000;
  color: #fff;
}

/* w3schools has this as a class ! */
#modal-body {
	padding: 16px 16px; 
	background-color: #fefefe;
    background-image: url(../images/ice-rink-background.jpg);
	border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

/* Mixin to vertically align the red lamps and team logo images */
/* @mixin vertical-align($position: relative) {
  position: $position;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
} */

#modal-body p {
	text-align: center;
  /* @include vertical-align(); */
}


.modal-footer {
  padding: 2px 16px;
  background-color: #5cb85c;
  color: white;
}

/* Add Animation */
@-webkit-keyframes slideIn {
  from {bottom: -300px; opacity: 0} 
  to {bottom: 0; opacity: 1}
}

@keyframes slideIn {
  from {bottom: -300px; opacity: 0}
  to {bottom: 0; opacity: 1}
}

@-webkit-keyframes fadeIn {
  from {opacity: 0} 
  to {opacity: 1}
}

@keyframes fadeIn {
  from {opacity: 0} 
  to {opacity: 1}
}

